--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="La Lucha Food Truck - Mexican food worth fighting for.">
     <meta name="keywords" content="Print statements, artists, art, printing">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="static/css/style.css">
     <!-- <link rel="apple-touch-icon" sizes="180x180" href="assets/images-pagetab/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images-pagetab/favicon-32x32.png">
@@ -22,7 +24,7 @@
     <header>
         <!-- Company logo & tagline -->
         <div>
-            <h1>print(<span>STATEMENTS</span>)</h1>
+            <h1>print(<span id="statement-green">STATEMENTS</span>)</h1>
             <h3>What does yours say?</h3>
             <hr>
         </div>
@@ -32,24 +34,29 @@
             <nav>
                 <ul id="navigation">
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="#">Home</a>
                     </li>
                     <li>
-                        <a href="locations.html">About</a>
+                        <a href="#">About</a>
                     </li>
                     <li>
-                        <a href="menu.html">Prints</a>
+                        <a href="#">Prints</a>
                     </li>
                     <li>
-                        <a href="contact.html">Blog</a>
+                        <a href="#">Blog</a>
                     </li>
                     <li>
-                        <a href="contact.html">Log in / Sign up</a>
+                        <a href="#">Log in / Sign up</a>
                     </li>
                 </ul>
             </nav>
         </div>
     </header>
+
+    <main>
+        {% block content %}
+        {% endblock %}
+    </main>
 
     <footer>
         <!--Social links-->
