Add blog posts to blog.html page.

--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
         <!-- Navigation bar -->
         <div>
             <nav>
-                <ul id="navigation">
+                <ul id="navigation" class="list-inline">
                     <li>
                         <a href="#">Home</a>
                     </li>
@@ -50,6 +50,7 @@
                     </li>
                 </ul>
             </nav>
+            <hr>
         </div>
     </header>
 
@@ -61,7 +62,7 @@
     <footer>
         <!--Social links-->
         <div>
-            <ul id="social-links">
+            <ul id="socila-links" class="list-inline">
                 <li>
                     <a href="https://facebook.com" target="_blank" rel="noopener"
                         aria-label="Visit our Facebook page (opens in a new tab)">
