Style site header & tagline.

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,8 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="La Lucha Food Truck - Mexican food worth fighting for.">
     <meta name="keywords" content="Print statements, artists, art, printing">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+        type="text/css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+        type="text/css" />
     <link rel="stylesheet" href="static/css/style.css">
     <!-- <link rel="apple-touch-icon" sizes="180x180" href="assets/images-pagetab/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images-pagetab/favicon-32x32.png">
@@ -23,33 +25,36 @@
 
     <header>
         <!-- Company logo & tagline -->
-        <div>
+        <div class="logo-tagline">
             <h1>print(<span id="statement-green">STATEMENTS</span>)</h1>
             <h3>What does yours say?</h3>
             <hr>
         </div>
 
         <!-- Navigation bar -->
-        <div>
-            <nav>
-                <ul id="navigation" class="list-inline">
-                    <li>
+        <div class="row">
+            <div class="col">
+                <ul id="nav" class="list-inline">
+                    <li class="col-2 col-sm-6 list-inline-item">
                         <a href="#">Home</a>
                     </li>
-                    <li>
+                    <li class="col-2 col-sm-6 list-inline-item">
                         <a href="#">About</a>
                     </li>
-                    <li>
+                    <li class="col-2 col-sm-6 list-inline-item">
                         <a href="#">Prints</a>
                     </li>
-                    <li>
+                    <li class="col-2 col-sm-6 list-inline-item">
                         <a href="#">Blog</a>
                     </li>
-                    <li>
+                    <li class="col-2 col-sm-6 list-inline-item">
                         <a href="#">Log in / Sign up</a>
                     </li>
+                    <!-- <li class="col-2 col-sm-6 list-inline-item">
+                        <a href="#">Contact us</a>
+                    </li> -->
                 </ul>
-            </nav>
+            </div>
             <hr>
         </div>
     </header>
@@ -61,33 +66,35 @@
 
     <footer>
         <!--Social links-->
-        <div>
-            <ul id="socila-links" class="list-inline">
-                <li>
-                    <a href="https://facebook.com" target="_blank" rel="noopener"
-                        aria-label="Visit our Facebook page (opens in a new tab)">
-                        <i class="fa-brands fa-facebook-f"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://twitter.com" target="_blank" rel="noopener"
-                        aria-label="Visit our Twitter page (opens in a new tab)">
-                        <i class="fa-brands fa-twitter"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.instagram.com" target="_blank" rel="noopener"
-                        aria-label="Visit our Instagram page (opens in a new tab)">
-                        <i class="fa-brands fa-instagram"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://youtube.com" target="_blank" rel="noopener"
-                        aria-label="Visit our YouTube page (opens in a new tab)">
-                        <i class="fa-brands fa-youtube"></i>
-                    </a>
-                </li>
-            </ul>
+        <div class="row">
+            <div class="col">
+                <ul id="social" class="list-inline">
+                    <li  class="list-inline-item">
+                        <a href="https://facebook.com" target="_blank" rel="noopener"
+                            aria-label="Visit our Facebook page (opens in a new tab)">
+                            <i class="fa-brands fa-facebook-f"></i>
+                        </a>
+                    </li>
+                    <li  class="list-inline-item">
+                        <a href="https://twitter.com" target="_blank" rel="noopener"
+                            aria-label="Visit our Twitter page (opens in a new tab)">
+                            <i class="fa-brands fa-twitter"></i>
+                        </a>
+                    </li>
+                    <li  class="list-inline-item">
+                        <a href="https://www.instagram.com" target="_blank" rel="noopener"
+                            aria-label="Visit our Instagram page (opens in a new tab)">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                    </li>
+                    <li  class="list-inline-item">
+                        <a href="https://youtube.com" target="_blank" rel="noopener"
+                            aria-label="Visit our YouTube page (opens in a new tab)">
+                            <i class="fa-brands fa-youtube"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
 
         <div>
