Style site navigation.

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,37 +26,39 @@
     <header>
         <!-- Company logo & tagline -->
         <div class="logo-tagline">
-            <h1>print(<span id="statement-green">STATEMENTS</span>)</h1>
-            <h3>What does yours say?</h3>
-            <hr>
+            <a href="#" class="logo-link">
+                <h1>print(<span id="statement-green">STATEMENTS</span>)</h1>
+                <h3>What does yours say?</h3>
+            </a>
         </div>
+        <hr>
 
         <!-- Navigation bar -->
         <div class="row">
             <div class="col">
                 <ul id="nav" class="list-inline">
-                    <li class="col-2 col-sm-6 list-inline-item">
-                        <a href="#">Home</a>
+                    <li class="list-inline-item col-md-2">
+                        <a href="#" class="nav-bar">Home</a>
                     </li>
-                    <li class="col-2 col-sm-6 list-inline-item">
-                        <a href="#">About</a>
+                    <li class="list-inline-item col-md-2">
+                        <a href="#" class="nav-bar">About</a>
                     </li>
-                    <li class="col-2 col-sm-6 list-inline-item">
-                        <a href="#">Prints</a>
+                    <li class="list-inline-item col-md-2">
+                        <a href="#" class="nav-bar">Prints</a>
                     </li>
-                    <li class="col-2 col-sm-6 list-inline-item">
-                        <a href="#">Blog</a>
+                    <li class="list-inline-item col-md-2">
+                        <a href="#" class="nav-bar">Blog</a>
                     </li>
-                    <li class="col-2 col-sm-6 list-inline-item">
-                        <a href="#">Log in / Sign up</a>
+                    <li class="list-inline-item col-md-2">
+                        <a href="#" class="nav-bar">Log in / Sign up</a>
                     </li>
-                    <!-- <li class="col-2 col-sm-6 list-inline-item">
-                        <a href="#">Contact us</a>
+                    <!-- <li class="list-inline-item col-md-2">
+                        <a href="#" class="nav-bar">Contact us</a>
                     </li> -->
                 </ul>
             </div>
-            <hr>
         </div>
+        <hr>
     </header>
 
     <main>
