Add class for blog-post in views.

--- a/templates/base.html
+++ b/templates/base.html
@@ -61,10 +61,10 @@
         <hr>
     </header>
 
-    <main>
+    <body>
         {% block content %}
         {% endblock %}
-    </main>
+    </body>
 
     <footer>
         <!--Social links-->
