--- a/static/css/style.css
+++ b/static/css/style.css
@@ -54,6 +54,11 @@ h3 {
     color: #EFB542;
 }
 
+.test-test {
+    text-align: right;
+    background-color: black;
+}
+
 /* For medium screen sizes from 950px wide & down (smaller laptops & tablets) */
 @media screen and (max-width:950px){
     h1 {
