Update href link in blog.html.

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -20,7 +20,7 @@
                             <p class="author">Author: {{ post.author }}</p>
                         </div>
                     </div>
-                    <a href="#" class="post-link">
+                    <a href="{% url 'blog_post' post.slug %}" class="post-link">
                         <h2 class="card-title">{{ post.title }}</h2>
                         <p class="card-text">{{ post.excerpt }}</p>
                     </a>
@@ -46,7 +46,7 @@
                             <p class="author">Author: {{ post.author }}</p>
                         </div>
                     </div>
-                    <a href="#" class="post-link">
+                    <a href="{% url 'blog_post' post.slug %}" class="post-link">
                         <h2 class="card-title">{{ post.title }}</h2>
                         <p class="card-text">{{ post.excerpt }}</p>
                     </a>
