--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
         type="text/css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         type="text/css" />
-    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <!-- <link rel="apple-touch-icon" sizes="180x180" href="assets/images-pagetab/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images-pagetab/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images-pagetab/favicon-16x16.png">
