--- a/templates/blog-post.html
+++ b/templates/blog-post.html
@@ -2,6 +2,87 @@
 
 {% block content %}
 
-<h1>WHAT?!</h1>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8">
+                <div class="d-none d-md-block col-md-6 masthead-image">
+                    {% if "placeholder" in post.featured_image.url %}
+                    <img src="https://images.pexels.com/photos/4065183/pexels-photo-4065183.jpeg?auto=compress&cs=tinysrgb&w=1600" alt="default image" width="100%">
+                    {% else %}
+                    <img src=" {{ post.featured_image.url }}" alt="{{ post.title }}" width="100%">
+                    {% endif %}
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="row">
+                    <h1 class="post-title">{{ post.title }}</h1>
+                </div>
+                <div class="row">
+                    <p class="post-subtitle">{{ post.author }} | {{ post.created_on }}</p>
+                </div>
+                <div class="row">
+                    <p class="card-text ">{{ post.content | safe }}</p>
+                </div>
+                <div class="row">
+                    <div class="col-2">
+                        <strong class="text-secondary"><i class="far fa-heart"></i> {{ post.number_of_likes }} </strong>
+                    </div>
+                    <div class="col-2">
+                        {% with comments.count as total_comments %}
+                        <strong class="text-secondary"><i class="far fa-comments"></i>
+                            {{ total_comments }}</strong>
+                        {% endwith %}
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+    </div>
+
+<!-- Blog post -->
+
+
+<!-- Following two sections taken from "I think therefore I blog"
+Will replace with my own formatting later. -->
+<div class="container">
+    <!-- <div class="row">
+        <div class="col card mb-4  mt-3 left  top">
+            <div class="card-body">
+                
+                
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <hr>
+        </div>
+    </div> -->
+    <div class="row">
+        <div class="col-md-8 card mb-4  mt-3 ">
+            <h3>Comments:</h3>
+            <div class="card-body">
+                {% for comment in comments %}
+                <div class="comments" style="padding: 10px;">
+                    <p class="font-weight-bold">
+                        {{ comment.name }}
+                        <span class=" text-muted font-weight-normal">
+                            {{ comment.created_on }}
+                        </span> wrote:
+                    </p>
+                    {{ comment.body | linebreaks }}
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+        <div class="col-md-4 card mb-4  mt-3 ">
+            <div class="card-body">
+            </div>
+        </div>
+    </div>
+</div>
+
 
 {% endblock %}
