--- a/templates/base.html
+++ b/templates/base.html
@@ -69,7 +69,7 @@
     <footer>
         <!--Social links-->
         <div class="row">
-            <div class="col">
+            <div class="col social-icons">
                 <ul id="social" class="list-inline">
                     <li  class="list-inline-item">
                         <a href="https://facebook.com" target="_blank" rel="noopener"
@@ -99,9 +99,8 @@
             </div>
         </div>
 
-        <div>
-            <p>Athens, Greece</p>
-            <p>Project created for educational purposes only.</p>
+        <div class="footer-text">
+            <p>Athens, Greece<br>Project created for educational purposes only.</p>
         </div>
     </footer>
 
