Add like/unlike functionality to blog post page.

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="La Lucha Food Truck - Mexican food worth fighting for.">
+    <meta name="description" content="Bringing artists & art enthusiasts together.">
     <meta name="keywords" content="Print statements, artists, art, printing">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
         type="text/css" />
