--- a/templates/base.html
+++ b/templates/base.html
@@ -108,6 +108,16 @@
                             <i class="fa-brands fa-youtube"></i>
                         </a>
                     </li>
+                    <li  class="list-inline-item">
+                        <a href="https://github.com/CluelessBiker" target="_blank" rel="noopener" aria-label="Visit my Github page (opens in a new tab)">
+                            <i class="fa-brands fa-github"></i>
+                        </a>
+                    </li>
+                    <li  class="list-inline-item">
+                        <a href="https://www.linkedin.com/in/lauren-nicole-popich-1ab87539/" target="_blank" rel="noopener" aria-label="Visit my Linkedin page (opens in a new tab)">
+                            <i class="fa-brands fa-linkedin-in"></i>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
