--- a/templates/base copy.html
+++ b/templates/base copy.html
@@ -37,29 +37,29 @@
         <div class="row">
             <div class="col">
                 <ul id="nav" class="list-inline">
-                    <li class="list-inline-item col-xs-6 col-md-2">
+                    <li class="list-inline-item col-md-2">
                         <a href="{% url 'home' %}" class="nav-bar">Home</a>
                     </li>
-                    <li class="list-inline-item col-xs-6 col-md-2">
+                    <li class="list-inline-item col-md-2">
                         <a href="#" class="nav-bar">About</a>
                     </li>
-                    <li class="list-inline-item col-xs-6 col-md-2">
+                    <li class="list-inline-item col-md-2">
                         <a href="#" class="nav-bar">Prints</a>
                     </li>
-                    <li class="list-inline-item col-xs-6 col-md-2">
+                    <li class="list-inline-item col-md-2">
                         <a href="{% url 'blog' %}" class="nav-bar">Blog</a>
                     </li>
                 
                     <!-- If statement taken from "I think therefore I blog" walkthrough -->
                     {% if user.is_authenticated %}
-                    <li class="list-inline-item col-xs-6 col-md-2">
+                    <li class="list-inline-item col-md-2">
                         <a class="nav-bar" href="{% url 'account_logout' %}">Logout</a>
                     </li>
                     {% else %}
                     <!-- <li class="list-inline-item col-md-2">
                         <a class="nav-bar" href="{% url 'account_signup' %}">Register</a>
                     </li> -->
-                    <li class="list-inline-item col-xs-6 col-md-2">
+                    <li class="list-inline-item col-md-2">
                         <a class="nav-bar" href="{% url 'account_login' %}">Login / Sign up</a>
                     </li>
                     {% endif %}
