--- a/templates/base.html
+++ b/templates/base.html
@@ -29,11 +29,7 @@
             <a href="{% url 'home' %}" class="logo-link">
                 <h1>print(<span id="statement-green">STATEMENTS</span>)</h1>
             </a>
-            <div class="row center-burger-tag">
-                <div class="col-1 display-mobile"><i class="fa-solid fa-bars"></i></div>
-                <div class="col-7"><h3>What does yours say?</h3></div>
-                
-            </div>
+            <h3>What does yours say?</h3>
         </div>
         <hr>
 
@@ -53,7 +49,7 @@
                     <li class="list-inline-item col-xs-6 col-md-2">
                         <a href="{% url 'blog' %}" class="nav-bar">Blog</a>
                     </li>
-                
+
                     <!-- If statement taken from "I think therefore I blog" walkthrough -->
                     {% if user.is_authenticated %}
                     <li class="list-inline-item col-xs-6 col-md-2">
@@ -74,6 +70,45 @@
             </div>
         </div>
         <hr class="vanish-mobile">
+
+        <!-- Collapsable nav bar for mobile view -->
+        <div class="accordion-item display-mobile">
+            <h2 class="accordion-header" id="headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    <i class="fa-solid fa-bars"></i>
+                </button>
+            </h2>
+            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <ul class="">
+                        <li>
+                            <a href="{% url 'home' %}" class="nav-bar">Home</a>
+                        </li>
+                        <li>
+                            <a href="#" class="nav-bar">About</a>
+                        </li>
+                        <li>
+                            <a href="#" class="nav-bar">Prints</a>
+                        </li>
+                        <li>
+                            <a href="{% url 'blog' %}" class="nav-bar">Blog</a>
+                        </li>
+
+                        {% if user.is_authenticated %}
+                        <li>
+                            <a class="nav-bar" href="{% url 'account_logout' %}">Logout</a>
+                        </li>
+                        {% else %}
+                        <li>
+                            <a class="nav-bar" href="{% url 'account_login' %}">Login / Sign up</a>
+                        </li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </div>
+        </div>
     </header>
 
     <body>
@@ -88,37 +123,39 @@
         <div class="row">
             <div class="col social-icons">
                 <ul id="social" class="list-inline">
-                    <li  class="list-inline-item">
+                    <li class="list-inline-item">
                         <a href="https://facebook.com" target="_blank" rel="noopener"
                             aria-label="Visit our Facebook page (opens in a new tab)">
                             <i class="fa-brands fa-facebook-f"></i>
                         </a>
                     </li>
-                    <li  class="list-inline-item">
+                    <li class="list-inline-item">
                         <a href="https://twitter.com" target="_blank" rel="noopener"
                             aria-label="Visit our Twitter page (opens in a new tab)">
                             <i class="fa-brands fa-twitter"></i>
                         </a>
                     </li>
-                    <li  class="list-inline-item">
+                    <li class="list-inline-item">
                         <a href="https://www.instagram.com" target="_blank" rel="noopener"
                             aria-label="Visit our Instagram page (opens in a new tab)">
                             <i class="fa-brands fa-instagram"></i>
                         </a>
                     </li>
-                    <li  class="list-inline-item">
+                    <li class="list-inline-item">
                         <a href="https://youtube.com" target="_blank" rel="noopener"
                             aria-label="Visit our YouTube page (opens in a new tab)">
                             <i class="fa-brands fa-youtube"></i>
                         </a>
                     </li>
-                    <li  class="list-inline-item">
-                        <a href="https://github.com/CluelessBiker" target="_blank" rel="noopener" aria-label="Visit my Github page (opens in a new tab)">
+                    <li class="list-inline-item">
+                        <a href="https://github.com/CluelessBiker" target="_blank" rel="noopener"
+                            aria-label="Visit my Github page (opens in a new tab)">
                             <i class="fa-brands fa-github"></i>
                         </a>
                     </li>
-                    <li  class="list-inline-item">
-                        <a href="https://www.linkedin.com/in/lauren-nicole-popich-1ab87539/" target="_blank" rel="noopener" aria-label="Visit my Linkedin page (opens in a new tab)">
+                    <li class="list-inline-item">
+                        <a href="https://www.linkedin.com/in/lauren-nicole-popich-1ab87539/" target="_blank"
+                            rel="noopener" aria-label="Visit my Linkedin page (opens in a new tab)">
                             <i class="fa-brands fa-linkedin-in"></i>
                         </a>
                     </li>
@@ -132,6 +169,8 @@
     </footer>
 
     <script src="https://kit.fontawesome.com/7daaaf94bb.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        crossorigin="anonymous"></script>
 
 </body>
 
