--- a/static/css/style.css
+++ b/static/css/style.css
@@ -75,17 +75,6 @@ h3 {
     contain: content;
 }
 
-/* Blog: all posts */
-/* .main-post {
-    margin: 0 auto;
-} */
-.left-posts {
-    float: left;
-}
-.right-posts {
-    float: right;
-}
-
 /* Social links */
 .social-icons {
     text-align: center;
@@ -109,6 +98,41 @@ h3 {
     text-align: center;
 
 }
+
+/* Blog: all posts */
+.all-posts-post-box {
+    box-sizing: border-box;
+    border: 1px solid #1A313C;
+    border-radius: 2%;
+    padding: 20px;
+}
+.all-posts-post-box img{
+    width: 90%;
+}
+
+.left-posts {
+    float: left;
+    width: 24%;
+}
+.right-posts {
+    width: 24%;
+    float: right;
+}
+
+.main-posts {
+    width: 48%;
+    margin: 0 auto;
+    float: none;
+}
+
+.second-left-posts {
+    width: 24%;
+}
+.second-right-posts {
+    width: 24%;
+}
+
+
 
 /* @media screen and (min-width:1600px){}
 
