--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,79 +1,116 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<!-- <div class="squareone"></div>
+<div class="squaretwo"></div>
+<div class="squarethree"></div>
+<div class="squarefour"></div>
+<div class="squarefive"></div> -->
 
-    {% for post in blogpost_list %}
+{% for post in blogpost_list %}
 
-    {% if forloop.counter == 1 %}
-        <div class="col-sm-12 col-md-6 blog-post-card main-post">
-            <!-- Formatting taken from "I think therefore I blog" walkthrough. -->
-            <div class="card mb-4">
-                <div class="card-body">
-                    <div class="image-container">
-                        {% if "placeholder" in post.featured_image.url %}
-                        <img class="card-img-top"
-                            src="https://images.pexels.com/photos/4065183/pexels-photo-4065183.jpeg?auto=compress&cs=tinysrgb&w=1600" alt="default image">
-                        {% else %}
-                        <img class="card-img-top" src="{{ post.featured_image.url }}" alt="{{ post.title }}">
-                        {% endif %}
-                        <div class="image-flash">
-                            <p class="author">Author: {{ post.author }}</p>
-                        </div>
-                    </div>
-                    <a href="{% url 'blog_post' post.slug %}" class="post-link">
-                        <h2 class="card-title">{{ post.title }}</h2>
-                        <p class="card-text">{{ post.excerpt }}</p>
-                    </a>
-                    <hr />
-                    <p class="card-text text-muted h6">{{ post.created_on}} <i class="far fa-heart"></i>
-                        {{ post.number_of_likes }}</p>
-                </div>
-            </div>
-        </div>
-
+{% if forloop.counter == 2 %}
+<div class="all-posts-post-box left-posts">
+    <h2>{{ post.title }}</h2>
+    {% if "placeholder" in post.featured_image.url %}
+    <img src="https://images.pexels.com/photos/4065183/pexels-photo-4065183.jpeg?auto=compress&cs=tinysrgb&w=1600"
+        alt="default image">
     {% else %}
-        <div class="col-sm-12 col-md-3 blog-post-card remaining-posts">
-            <div class="card mb-4">
-                <div class="card-body">
-                    <div class="image-container">
-                        {% if "placeholder" in post.featured_image.url %}
-                        <img class="card-img-top"
-                            src="https://images.pexels.com/photos/4065183/pexels-photo-4065183.jpeg?auto=compress&cs=tinysrgb&w=1600" alt="default image">
-                        {% else %}
-                        <img class="card-img-top" src="{{ post.featured_image.url }}" alt="{{ post.title }}">
-                        {% endif %}
-                        <div class="image-flash">
-                            <p class="author">Author: {{ post.author }}</p>
-                        </div>
-                    </div>
-                    <a href="{% url 'blog_post' post.slug %}" class="post-link">
-                        <h2 class="card-title">{{ post.title }}</h2>
-                        <p class="card-text">{{ post.excerpt }}</p>
-                    </a>
-                    <hr />
-                    <p class="card-text text-muted h6">{{ post.created_on}} <i class="far fa-heart"></i>
-                        {{ post.number_of_likes }}</p>
-                </div>
-            </div>
-        </div>
+    <img src="{{ post.featured_image.url }}" alt="{{ post.title }}">
     {% endif %}
-    {% endfor %}
-
-    <div>
-
-        {% if is_paginated %}
-        <nav aria-label="Page navigation">
-            <ul class="pagination justify-content-center">
-                {% if page_obj.has_previous %}
-                <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV </a></li>
-                {% endif %}
-                {% if page_obj.has_next %}
-                <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
-
-                {% endif %}
-            </ul>
-        </nav>
-        {% endif %}
+    <p>{{ post.excerpt }}</p>
+    <div all the rest>
+        <h3>Author: {{ post.author }}</h3>
+        <p>{{ post.created_on}}</p>
+        <div><i class="far fa-heart"></i>{{ post.number_of_likes }}</div>
     </div>
+</div>
+
+{% elif forloop.counter == 4 %}
+<div class="all-posts-post-box right-posts">
+    <h2>{{ post.title }}</h2>
+    {% if "placeholder" in post.featured_image.url %}
+    <img src="https://images.pexels.com/photos/4065183/pexels-photo-4065183.jpeg?auto=compress&cs=tinysrgb&w=1600"
+        alt="default image">
+    {% else %}
+    <img src="{{ post.featured_image.url }}" alt="{{ post.title }}">
+    {% endif %}
+    <p>{{ post.excerpt }}</p>
+    <div all the rest>
+        <h3>Author: {{ post.author }}</h3>
+        <p>{{ post.created_on}}</p>
+        <div><i class="far fa-heart"></i>{{ post.number_of_likes }}</div>
+    </div>
+</div>
+
+{% elif forloop.counter == 1 %}
+<div class="all-posts-post-box main-posts">
+    <h2>{{ post.title }}</h2>
+    {% if "placeholder" in post.featured_image.url %}
+    <img src="https://images.pexels.com/photos/4065183/pexels-photo-4065183.jpeg?auto=compress&cs=tinysrgb&w=1600"
+        alt="default image">
+    {% else %}
+    <img src="{{ post.featured_image.url }}" alt="{{ post.title }}">
+    {% endif %}
+    <p>{{ post.excerpt }}</p>
+    <div all the rest>
+        <h3>Author: {{ post.author }}</h3>
+        <p>{{ post.created_on}}</p>
+        <div><i class="far fa-heart"></i>{{ post.number_of_likes }}</div>
+    </div>
+</div>
+
+{% elif forloop.counter == 5 %}
+<div class="all-posts-post-box second-left-posts">
+    <h2>{{ post.title }}</h2>
+    {% if "placeholder" in post.featured_image.url %}
+    <img src="https://images.pexels.com/photos/4065183/pexels-photo-4065183.jpeg?auto=compress&cs=tinysrgb&w=1600"
+        alt="default image">
+    {% else %}
+    <img src="{{ post.featured_image.url }}" alt="{{ post.title }}">
+    {% endif %}
+    <p>{{ post.excerpt }}</p>
+    <div all the rest>
+        <h3>Author: {{ post.author }}</h3>
+        <p>{{ post.created_on}}</p>
+        <div><i class="far fa-heart"></i>{{ post.number_of_likes }}</div>
+    </div>
+</div>
+
+{% else %}
+<div class="all-posts-post-box second-right-posts">
+    <h2>{{ post.title }}</h2>
+    {% if "placeholder" in post.featured_image.url %}
+    <img src="https://images.pexels.com/photos/4065183/pexels-photo-4065183.jpeg?auto=compress&cs=tinysrgb&w=1600"
+        alt="default image">
+    {% else %}
+    <img src="{{ post.featured_image.url }}" alt="{{ post.title }}">
+    {% endif %}
+    <p>{{ post.excerpt }}</p>
+    <div all the rest>
+        <h3>Author: {{ post.author }}</h3>
+        <p>{{ post.created_on}}</p>
+        <div><i class="far fa-heart"></i>{{ post.number_of_likes }}</div>
+    </div>
+</div>
+
+{% endif %}
+{% endfor %}
+
+<div>
+    {% if is_paginated %}
+    <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center">
+            {% if page_obj.has_previous %}
+            <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV </a></li>
+            {% endif %}
+            {% if page_obj.has_next %}
+            <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
+
+            {% endif %}
+        </ul>
+    </nav>
+    {% endif %}
+</div>
 
 {% endblock %}
